--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "typescript": "2.4.2"
     "@agm/core": "1.0.0-beta.2",
     "@angular/animations": "5.2.9",
     "@angular/cdk": "5.2.4",
@@ -81,4 +82,10 @@
     "tslint": "5.9.1",
     "typescript": "2.4.2"
   }
+  "engines": {
+    "node": "8.10.0",
+    "npm": "5.6.0"
+  }
+
+
 }
