--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "private": true,
   "dependencies": {
-    "typescript": "2.4.2"
+    "typescript": "2.4.2",
     "@agm/core": "1.0.0-beta.2",
     "@angular/animations": "5.2.9",
     "@angular/cdk": "5.2.4",
