--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   },
   "private": true,
   "dependencies": {
-    "typescript": "2.4.2",
     "@agm/core": "1.0.0-beta.2",
     "@angular/animations": "5.2.9",
     "@angular/cdk": "5.2.4",
@@ -50,12 +49,15 @@
     "googleapis": "28.1.0",
     "hammerjs": "2.0.8",
     "jquery": "3.2.1",
+    "jw-angular-pagination": "^1.0.5",
     "jw-angular-social-buttons": "0.0.1",
     "moment": "2.18.1",
+    "ngx-spinner": "^6.0.0",
     "perfect-scrollbar": "1.1.0",
     "popper.js": "1.14.3",
     "rxjs": "^6.2.1",
     "rxjs-compat": "^6.2.1",
+    "typescript": "2.4.2",
     "web-animations-js": "2.3.1",
     "zone.js": "0.8.4"
   },
